# ambicam

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: cmake.yml
